--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.2",
+    "framer-motion": "^12.23.22",
     "next": "15.0.2",
     "nodemailer": "^7.0.3",
     "react": "19.0.0-rc-02c0e824-20241028",
