--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "framer-motion": "^12.23.22",
     "next": "15.0.2",
     "nodemailer": "^7.0.3",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "resend": "^4.5.2"
   },
   "devDependencies": {
